軽微な修正。